--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -5,9 +5,11 @@ one:
   title: MyString
   blog_id: 1
   uid: MyString
+  content: MyText
 
 two:
   user_id: 1
   title: MyString
   blog_id: 1
   uid: MyString
+  content: MyText
