--- a/config/database.yml
+++ b/config/database.yml
@@ -83,6 +83,4 @@ test:
 #
 production:
   <<: *default
-  database: environment_production
-  username: environment
-  password: <%= ENV['ENVIRONMENT_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
