--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@
 
 # Ignore secrets
 /config/secrets.yml
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/config.yml
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
