making sure we add https

--- a/config/access_points.yml
+++ b/config/access_points.yml
@@ -2,4 +2,4 @@ development:
     webserver_domain: "http://52.87.204.171:8080"
 
 production:
-    webserver_domain: "http://blogembed.com"    
+    webserver_domain: "https://blogembed.com"    
